[project]
name = "tvbot"
version = "0.1.0"
description = ""
authors = [
    {name = "antonin-tarrade",email = "antotarrade@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "twitchio (>=2.10.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
